[project]
name = "odbc2deltalake"
version = "0.12.7"
description = ""
authors = [{ name = "Adrian Ehrsam", email = "adrian.ehrsam@bmsuisse.ch" }]
dependencies = [
    "pydantic >=1.10.0",
    "pyodbc >=5.1.0,<6",
    "deltalake2db >=0.3.3",
    "arrow-odbc >=5.0.0",
    "deltalake >=0.17.1",
    "duckdb >=0.10.2",
    "pyarrow >=16.1",
    "azure-identity >=1.15.0,<2",
    "adlfs >=2024.2.0,<2025",
    "sqlglot >=23.17.0",
]
requires-python = "~=3.9"

[project.scripts]

[project.optional-dependencies]
local = ["pyodbc", "deltalake2db", "arrow-odbc", "deltalake", "duckdb"]
local_azure = ["azure-identity", "adlfs", "azure-storage-file-datalake"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venv = ".venv"
venvPath = "."
pythonVersion = "3.9"
typeCheckingMode = "basic"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc.)?abstractmethod",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.uv]
native-tls = true
keyring-provider = "subprocess"

[[tool.uv.index]]
name = "BMSAzureDevOps"
url = "https://VssSessionToken@pkgs.dev.azure.com/bmeurope/_packaging/BMS/pypi/simple/"
explicit = true
publish-url = "https://pkgs.dev.azure.com/bmeurope/_packaging/BMS/pypi/upload/"

[dependency-groups]
dev = ["pyright >=1.1.352,<2", "ruff >=0.4.3"]
test = [
    "pytest >=8.0.2,<9",
    "pytest-asyncio >=0.23.5",
    "pytest-order >=1.2.0,<2",
    "pytest-cov >=4.1.0,<5",
    "docker >=7.0.0,<8",
    "python-dotenv >=1.0.1,<2",
    "azure-storage-blob >=12.19.1,<13",
    "pandas >=1.4.2",
    "delta-spark >=3.2.0,<4",
    "duckdb ~=1.0",
    "pyarrow >=16.1",
    "polars >=1.17.1,<2",
]
spark = ["delta-spark >=3.2.0,<4", "pyspark >=3.5.1,<4"]
